Fixed text overflow for experience blocks

--- a/styles/blocks/accomplishments-list.css
+++ b/styles/blocks/accomplishments-list.css
@@ -19,3 +19,7 @@
   align-items: center;
   flex-shrink: 0;
 }
+
+.accomplishments-list__text {
+  word-break: break-word;
+}
